--- a/index.html
+++ b/index.html
@@ -73,17 +73,20 @@
 				<div class="col-sm-10 text-left"> 
 					<div class="tab-content">
 						<div role="tabpanel" class="tab-pane fade in active" id="home">
-							
-								<div class="jumbotron col-sm-10">
-									<h1>
-										Jobs Vacancies Analysis
-									</h1>
-									<p>This is a web app to analysis jobs vacancies data, with dashboards about 
-										vacancies, salaries among others.</p>
-									<p>Also there is some analysis about Companies Rating, analyzing rate and 
-										comments of employee or ex-employee about some companies.</p>
+							<div class="jumbotron col-sm-10">
+								<h1>
+									Jobs Vacancies Analysis
+								</h1>
+								<p> This is a web app to analysis jobs vacancies data, with dashboards about 
+									vacancies, salaries among others.</p>
+								<p>Also there is some analysis about companies rating, analyzing rate and 
+									comments of employee or ex-employee about some companies.</p>
+								<div class="alert alert-success">
+									<p><strong> More of 40 thousand jobs vacancies.</strong></p>
+									<br>
+									<p><strong> Rating of IT Companies.</strong></p>
 								</div>
-														
+							</div>
 						</div>
 						<div role="tabpanel" class="tab-pane fade" id="vtab1">
 							<h3> Jobs Vacancies Analysis</h3>
